const grpc = require("@grpc/grpc-js");
const protoLoader = require("@grpc/proto-loader");

const packageDef = protoLoader.loadSync("server_stream.proto");
const grpcObj = grpc.loadPackageDefinition(packageDef);
const demo = grpcObj.demo;

const client = new demo.NewsService("localhost:50051", grpc.credentials.createInsecure());


const call = client.GetNews({ topic: "CÃ´ng nghá»‡" });

call.on("data", (newsItem) => {
  console.log("ðŸ“° Tin:", newsItem.title);
});


call.on("end", () => {
  console.log("âœ… Server Ä‘Ã£ gá»­i xong táº¥t cáº£ tin");
});


call.on("error", (err) => {
  console.error("Stream error:", err);
});
